<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_game_blue_theme"
    tools:context=".GuessTheCeleb.GuessTheCelebMainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/guess_the_celeb_game_name"
        android:fontFamily="@font/paytone"
        android:textSize="40sp"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/start_game_celeb"
            android:textSize="18sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/play_now"
            android:fontFamily="@font/paytone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:fontFamily="@font/paytone"
            android:id="@+id/high_scores_celeb"
            android:textSize="18sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_selector"
            android:text="@string/high_scores"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            />

        <Button
            android:fontFamily="@font/paytone"
            android:id="@+id/help_btn_celeb"
            android:layout_width="200dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_selector"
            android:text="Help"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>